--- a/gb/19/10/2/n11563233.md
+++ b/gb/19/10/2/n11563233.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/frqens3671/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/frqens3671/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/frqens3671/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/frqens3671/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/frqens3671/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/frqens3671/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/frqens3671/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>浴室翻修之前的五个提示</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/shower-2752478_1280-600x400.jpg" />
 <h6>浴室是一个我们逃离并将自己隔在繁忙嘈杂之外的地方。因此，在浴室设计和改造方面，您需要确保它完美无瑕。（Pixabay.com）
 </h6>
 <hr>
-<p>【大纪元2019年10月02日讯】（大纪元记者海沙澳洲悉尼编译报导）<ahref="https://github.com/frqens3671/djy/blob/master/gb/tag/%E6%B5%B4%E5%AE%A4.md#1">浴室</a>是我们大多数人的避难所。这是一个我们逃离并将自己隔在繁忙嘈杂之外的地方。它不仅仅是一个厕所，洗手台和淋浴的地方，它是一个出色的创意和无数思考编织的地方。因此，在浴室<ahref="https://github.com/frqens3671/djy/blob/master/gb/tag/%E8%AE%BE%E8%AE%A1.md#1">设计</a>和<ahref="https://github.com/frqens3671/djy/blob/master/gb/tag/%E6%94%B9%E9%80%A0.md#1">改造</a>方面，您需要确保它完美无瑕！我们编制了一份最重要的提示列表，以帮助您完成设计和改造之旅。</p>
+<p>【大纪元2019年10月02日讯】（大纪元记者海沙澳洲悉尼编译报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B4%E5%AE%A4.md#1">浴室</a>是我们大多数人的避难所。这是一个我们逃离并将自己隔在繁忙嘈杂之外的地方。它不仅仅是一个厕所，洗手台和淋浴的地方，它是一个出色的创意和无数思考编织的地方。因此，在浴室<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%AE%BE%E8%AE%A1.md#1">设计</a>和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%B9%E9%80%A0.md#1">改造</a>方面，您需要确保它完美无瑕！我们编制了一份最重要的提示列表，以帮助您完成设计和改造之旅。</p>
 <h2>1、了解你的预算</h2>
-<p>在开始任何项目或建设之前，强烈建议您检查预算：项目规模，原材料质量和人工成本都将对您的最终数字产生影响。第一步是决定哪种级别的<ahref="https://github.com/frqens3671/djy/blob/master/gb/tag/%E6%94%B9%E9%80%A0.md#1">改造</a>适合您 &#8211; 您是在重建基本的，还是中高档，亦或豪华<ahref="https://github.com/frqens3671/djy/blob/master/gb/tag/%E6%B5%B4%E5%AE%A4.md#1">浴室</a>？你打算更换管道还是只是装置？在开始之前询问这些问题将有助于你不在后来心疼荷包。不要害怕自己动手做一些工作，你可以通过自己负责拆除一些旧装置而节省许多金钱。</p>
+<p>在开始任何项目或建设之前，强烈建议您检查预算：项目规模，原材料质量和人工成本都将对您的最终数字产生影响。第一步是决定哪种级别的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%B9%E9%80%A0.md#1">改造</a>适合您 &#8211; 您是在重建基本的，还是中高档，亦或豪华<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B4%E5%AE%A4.md#1">浴室</a>？你打算更换管道还是只是装置？在开始之前询问这些问题将有助于你不在后来心疼荷包。不要害怕自己动手做一些工作，你可以通过自己负责拆除一些旧装置而节省许多金钱。</p>
 <h2>2、照明</h2>
 <p>人们理所当然地认为在浴室中适当的照明是多么重要。浴室空间是我们唯一可以锁定自己的自由房间，为什么不让你的私人休息室成为一个光线充足的避难处？最佳浴室氛围所需的三种灯光是，工作、装饰和环境。工作照明：这是最适合看清你自己的照明。建议在镜子周围使用此照明。装饰照明：这种照明用于炫耀浴室艺术品 &#8211; 花卉，图片或中心件。通常更柔和，更温暖的灯光将有助于将摆放在浴室内的任何艺术品带出“闪光”的特色。环境照明：这是黑斑的填充光，让你的浴室没有黑暗的死角。建议将这些灯具安装在浴室周围。</p>
 <h2>3、选择合适的梳妆台和固定装置</h2>
@@ -24,47 +24,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/6/13/n11320419.md#1">室内装修纠纷多？专家指点5步骤 避开陷阱不吃亏</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/7/15/n11385443.md#1">旧屋翻新 室内防水工法8要领</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/7/28/n11414146.md#1">三角形的房子如何设计？“塔之家”完美呈现</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/8/14/n11452956.md#1">水泥地板的抛光</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/8/22/n11470500.md#1">如何打造豪华的现代浴室</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/8/22/n11470533.md#1">门窗大全：让你选择合适的门窗</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/8/28/n11483303.md#1">如何设计一个易于清洁的浴室</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/19/8/31/n11490036.md#1">卖房须知：这些房产缺陷会吓跑买家</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/9/n13292715.md#1">厨房水槽和炉灶安装在哪最好</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/9/21/n13249865.md#1">设计卧房浴室的注意事项</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/13/n11320419.md#1">室内装修纠纷多？专家指点5步骤 避开陷阱不吃亏</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/15/n11385443.md#1">旧屋翻新 室内防水工法8要领</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/28/n11414146.md#1">三角形的房子如何设计？“塔之家”完美呈现</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/14/n11452956.md#1">水泥地板的抛光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/22/n11470500.md#1">如何打造豪华的现代浴室</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/22/n11470533.md#1">门窗大全：让你选择合适的门窗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/28/n11483303.md#1">如何设计一个易于清洁的浴室</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/31/n11490036.md#1">卖房须知：这些房产缺陷会吓跑买家</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/23/n13667260.md#1">2022年最令人期待的五大设计趋势</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13650079.md#1">看星星 家用电器的能源等级到底意味着什么</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/5/n13283972.md#1">【未解之谜】“江南布衣” 图案背后的秘密</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/7/n13288631.md#1">不因未婚妻患病貌丑毁婚约 君子守信得福报</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/5/n13283523.md#1">【直播】美智库：中共军机扰台 美台如何应对</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/14/n13304655.md#1">【财商天下】中共放开电价 通胀老虎出笼</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/14/n13304862.md#1">【直播】美国会听证：评估香港人权状况</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/13/n13301487.md#1">【独家】湖北纵火案逾20人死伤 消息遭封锁</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13299881.md#1">王友群：习近平九年反“政变”之路</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13300005.md#1">【方菲访谈】谢金河：中国经济的最大变数</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13299943.md#1">陆第一网红papi酱工作室注销 称决议解散</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13298305.md#1">比莉隔15年复出作《妈，别闹了！》 将登Netflix</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13300452.md#1">音乐节演出被取消 歌手宋冬野喊话求放条生路</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13298927.md#1">黄子佼规划60岁退休 已锁定数位接班人</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/9/8/n13218308.md#1">耳穴竟如此神奇！这样按耳朵提升免疫力、减肥</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/13/n13300831.md#1">脖子上套着轮胎2年 这只驼鹿终于解脱了</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/12/n13299239.md#1">【健康1+1】疫情下降 背后真正原因不是疫苗？</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/2/n13276599.md#1">远离胃酸逆流！营养师：这些膳食纤维是食疗首选</a></li>
-<li><a href="https://github.com/frqens3671/djy/blob/master/gb/21/10/13/n13301342.md#1">曾因自拍爆红 大猩猩临终前拥抱一生的恩人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/frqens3671/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/frqens3671/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/2/n11563233.htm">浴室翻修之前的五个提示</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/2/n11563233.htm">浴室翻修之前的五个提示</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/frqens3671/djy/blob/master/gb/19/10/2/n11563233.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/frqens3671/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/frqens3671/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/frqens3671/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/frqens3671/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/frqens3671/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/10/2/n11563233.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
